--- a/hotelaria/android/app/src/main/AndroidManifest.xml
+++ b/hotelaria/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="hotelaria"
+        android:label="HotelariaPro"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
+        android:roundIcon="@mipmap/launcher_icon"
         <activity
             android:name=".MainActivity"
             android:exported="true"
