Ajustes Pousda e usuário

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "hotelaria",
-    "short_name": "hotelaria",
+    "name": "Hotelaria Pro",
+    "short_name": "Hotelaria Pro",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
